--- a/account/templates/account/member_list.html
+++ b/account/templates/account/member_list.html
@@ -15,6 +15,7 @@
             <h5 class="card-title">{{ member.name }}</h5>
             <p class="card-text">{{ member.email }}</p>
             <p class="card-text">Age : {{ member.age }}</p>
+            <a class="card-title">{{ member.name }}</a>
           </div>
         </div>
       </div>
